--- a/MBA_Frontend/app.json
+++ b/MBA_Frontend/app.json
@@ -23,6 +23,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow MBA to access your camera to scan QR codes."
+        }
+      ]
+    ]
   }
 }
