--- a/MBA_backend/bankapp/bankapp/src/main/resources/application.properties
+++ b/MBA_backend/bankapp/bankapp/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.port=8080
 server.address=0.0.0.0
+
+logging.level.web=DEBUG
+logging.level.org.springframework.web=DEBUG
