--- a/MBA_backend/bankapp/bankapp/src/main/resources/application.properties
+++ b/MBA_backend/bankapp/bankapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=bankapp
-spring.datasource.url=jdbc:mysql://localhost:3306/bankappdb
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bankappdb
 spring.datasource.username=root
 spring.datasource.password=Sanju@12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,3 +13,5 @@ server.address=0.0.0.0
 
 logging.level.web=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.autoconfigure.web.servlet=DEBUG
+logging.level.com.mobilebanking=DEBUG
