--- a/MBA_Frontend/package.json
+++ b/MBA_Frontend/package.json
@@ -23,7 +23,9 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-picker-select": "^9.3.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
