--- a/MBA_Frontend/package.json
+++ b/MBA_Frontend/package.json
@@ -19,12 +19,14 @@
     "axios": "^1.8.4",
     "expo": "~52.0.43",
     "expo-camera": "~16.0.18",
+    "expo-linear-gradient": "~14.0.2",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-picker-select": "^9.3.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
